refactor: best practice